TestCases/LLVMTests/SyntaxErrorTests/tests/test16.c
int main() {
int const y = 6532;
return 0;
}
